# learn_python_once_again

./: .editorconfig  classes.py  download-and-install  funny_python39.py  how_to_write_git_commits  indexing.py  monads  overload_assignment.py  very_free_monad.py  visitor_pattern.py  ways_to_create_dictionary.py
algorithms/: dijkstra.py  fenwick.py  fenwick2d.py  karatsuba.py  knuth_morris_pratt.py  kruskal.py  kruskal_maze.py  roy_floyd_warshall.py  sorting.py
build_the_wheel/using_setup.cfg/: setup.cfg  setup.py
build_the_wheel/using_setup.cfg/src/my_package/: __init__.py
concepts/: advanced_collections.py  bitarray.py  dict_arithmetic.py  docopt_wrapper.py  extension_methods.py  file_importer.py  function_overloading.py  gen-css.py  int_literals.py  interactivelly_test_rationals.py  interpretator-based-typechecker.py  iterators.py  mytsv.py  obfuscate.py  overload_assignment.py  project_directory_structure  properties.py  quine.py  rational_number_enumeration_trees.py  rationals.py  rationals_using_inheritance_from_fractions.py  read_key_on_linux_with_timeout.py  read_pressed_keys.py  read_pressed_keys_on_linux.py  read_pressed_keys_on_windows.py  sandbox.py  sequential_sets.py  sha3_256.py  tab_parser.py  tabbed.py  test_mdarray_implementation.py  test_sequential_sets.py  test_string_representation_of_my_rationals.py  test_tabbed.py  word-to-words.py
concepts/the_traditional_way_of_extending_python/: .clang-format  CMakeLists.txt
extensions/use_python_h/classes/: CMakeLists.txt  aboba.c  aboba.pyi  setup.py
just_some_things/: ascii-image  ascii_image  z85  (+30 more)
(+65 files in other folders)
