[metadata]
name = my_package
version = attr: my_package.VERSION
description = My package description
long_description = file: README.md
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir= =src
packages = my_package
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.so
